--- a/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
@@ -35,16 +35,16 @@
                 "Bootstrap": {"deps": ['jQuery']}
             },
             paths: {
-                ModPicker: '/Library/Bootstrap.DateTimePicker/3.1.3/build/js/bootstrap-datetimepicker.min',
-                ModSelecter: '/Library/jQuery.Selecter/3.2.3/jquery.fs.selecter.min',
-                ModStepper: '/Library/jQuery.Stepper/3.0.8/jquery.fs.stepper.min',
-                ModCompleter: '/Library/Twitter.Typeahead/0.10.5/dist/typeahead.bundle.min',
+                ModPicker: '{{ PathBase }}/Library/Bootstrap.DateTimePicker/3.1.3/build/js/bootstrap-datetimepicker.min',
+                ModSelecter: '{{ PathBase }}/Library/jQuery.Selecter/3.2.3/jquery.fs.selecter.min',
+                ModStepper: '{{ PathBase }}/Library/jQuery.Stepper/3.0.8/jquery.fs.stepper.min',
+                ModCompleter: '{{ PathBase }}/Library/Twitter.Typeahead/0.10.5/dist/typeahead.bundle.min',
 
-                jQuery: '/Library/jQuery/1.11.1/dist/jquery.min',
-                Bootstrap: '/Library/Bootstrap/3.2.0/dist/js/bootstrap.min',
-                Moment: '/Library/Moment.Js/2.8.4/min/moment-with-locales.min',
-                Check: '/Library/Bootflat/2.0.4/bootflat/js/icheck.min'
-                //Css: '/Library/Require.Css/0.1.8/css.min'
+                jQuery: '{{ PathBase }}/Library/jQuery/1.11.1/dist/jquery.min',
+                Bootstrap: '{{ PathBase }}/Library/Bootstrap/3.2.0/dist/js/bootstrap.min',
+                Moment: '{{ PathBase }}/Library/Moment.Js/2.8.4/min/moment-with-locales.min',
+                Check: '{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/js/icheck.min',
+                Css: '{{ PathBase }}/Library/Require.Css/0.1.8/css.min'
             },
             waitSeconds: 120
         } );
@@ -63,7 +63,8 @@
         <div class="col-xs-12 footer  small">
             <div class="clearfix">
                 <div class="footer-logo">
-                    <a href="#">KREDA&nbsp;<img src="/Sphere/Client/Style/Resource/logo_kreide.png" width="105"
+                    <a href="#">KREDA&nbsp;<img src="{{ PathBase }}/Sphere/Client/Style/Resource/logo_kreide.png"
+                                                width="105"
                                                 height="61"></a>
                 </div>
                 <dl class="footer-nav">
